--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -430,7 +430,7 @@ m4trace:/usr/share/aclocal-1.11/python.m4:35: -1- AC_DEFUN([AM_PATH_PYTHON], [
   dnl Find a Python interpreter.  Python versions prior to 2.0 are not
   dnl supported. (2.0 was released on October 16, 2000).
   m4_define_default([_AM_PYTHON_INTERPRETER_LIST],
-                    [python python2 python3 python3.0 python2.5 python2.4 python2.3 python2.2 dnl
+                    [python python2 python3 python3.2 python3.1 python3.0 python2.7 python2.6 python2.5 python2.4 python2.3 python2.2 dnl
 python2.1 python2.0])
 
   m4_if([$1],[],[
@@ -1223,7 +1223,7 @@ m4trace:configure.in:16: -1- AM_INIT_AUTOMAKE
 m4trace:configure.in:16: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
 m4trace:configure.in:16: -1- AM_SET_CURRENT_AUTOMAKE_VERSION
 m4trace:configure.in:16: -1- AM_AUTOMAKE_VERSION([1.11.1])
-m4trace:configure.in:16: -1- _AM_AUTOCONF_VERSION([2.65])
+m4trace:configure.in:16: -1- _AM_AUTOCONF_VERSION([2.67])
 m4trace:configure.in:16: -1- m4_pattern_allow([^INSTALL_PROGRAM$])
 m4trace:configure.in:16: -1- m4_pattern_allow([^INSTALL_SCRIPT$])
 m4trace:configure.in:16: -1- m4_pattern_allow([^INSTALL_DATA$])
@@ -1455,13 +1455,13 @@ m4trace:configure.in:76: -1- m4_pattern_allow([^HAVE_BOOST_IOSTREAMS$])
 m4trace:configure.in:76: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
 m4trace:configure.in:76: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
 m4trace:configure.in:76: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
-m4trace:configure.in:82: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2744: AC_CHECK_FILE is expanded from...
+m4trace:configure.in:82: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2765: AC_CHECK_FILE is expanded from...
 configure.in:82: the top level])
 m4trace:configure.in:82: -1- m4_pattern_allow([^PATCH$])
 m4trace:configure.in:82: -1- m4_pattern_allow([^TAR$])
-m4trace:configure.in:82: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2744: AC_CHECK_FILE is expanded from...
+m4trace:configure.in:82: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2765: AC_CHECK_FILE is expanded from...
 ../../lib/m4sugar/m4sh.m4:598: AS_IF is expanded from...
-../../lib/autoconf/general.m4:2744: AC_CHECK_FILE is expanded from...
+../../lib/autoconf/general.m4:2765: AC_CHECK_FILE is expanded from...
 configure.in:82: the top level])
 m4trace:configure.in:98: -1- m4_pattern_allow([^subdirs$])
 m4trace:configure.in:100: -1- AX_PYTHON
