--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+justniffer (0.5.10) unstable; urgency=low
+  * -F option added, to force the reading pcap files with truncated packets
+
+ -- Oreste Notelli <oreste.notelli plecno.com>  Tue, 12 September 2011 10:42:00 +0100
+ 
 justniffer (0.5.9) unstable; urgency=high
   * right configuration for tcp streams limit of libnids (thanks to Benet Leong's contribution)
 
