--- a/justniffer.8
+++ b/justniffer.8
@@ -108,7 +108,7 @@ Force the reading of a pcap file also if captured with truncated packets (for ex
 .TP
 .B
 \fB-p\fP or \fB--packet-filter\fP=<filter>
-packet filter (tcpdump filter syntax) (see \fBtcpdump\fP(1))
+packet filter (pcap filter syntax) (see \fBpcap-filter\fP(7))
 .TP
 Examples: 
 
