added -i all doc
git-svn-id: svn://svn.code.sf.net/p/justniffer/code/trunk@192 1140968e-e2c7-4c3d-a3be-3139d5afca7e

--- a/justniffer.8
+++ b/justniffer.8
@@ -91,7 +91,7 @@
 
 
 .SH OPTIONS
-\fB-i\fP or \fB--interface\fP=<\fBinterface\fP>\fBinterface\fP to listen on (e.g. eth0, en1, etc.)
+\fB-i\fP or \fB--interface\fP=<\fBinterface\fP>\fBinterface\fP to listen on (e.g. eth0, en1, etc.). \fB-i all \fP for all interfaces
 .TP
 Example: justniffer -i eth0
 .TP
@@ -925,4 +925,4 @@ justniffer \fB-f\fP ./test.cap
 .SH AUTHOR
 Oreste Notelli <oreste.notelli@plecno.com>
 .SH COPYRIGHT
-Copyright (c) 2007-2011 Plecno s.r.l.
+Copyright (c) 2007-2012 Plecno s.r.l.
