--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -1615,44 +1615,46 @@ acinclude.m4:425: AX_BOOST_PYTHON is expanded from...
 configure.in:72: the top level])
 m4trace:configure.in:72: -1- m4_pattern_allow([^HAVE_BOOST_PYTHON$])
 m4trace:configure.in:72: -1- m4_pattern_allow([^BOOST_PYTHON_LIB$])
-m4trace:configure.in:78: -1- AX_BOOST_PROGRAM_OPTIONS
-m4trace:configure.in:78: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS$])
-m4trace:configure.in:78: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
-m4trace:configure.in:78: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
-m4trace:configure.in:78: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
-m4trace:configure.in:84: -1- AX_BOOST_IOSTREAMS
-m4trace:configure.in:84: -1- m4_pattern_allow([^HAVE_BOOST_IOSTREAMS$])
-m4trace:configure.in:84: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
-m4trace:configure.in:84: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
-m4trace:configure.in:84: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
-m4trace:configure.in:90: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2778: AC_CHECK_FILE is expanded from...
-configure.in:90: the top level])
-m4trace:configure.in:90: -1- m4_pattern_allow([^PATCH$])
-m4trace:configure.in:90: -1- m4_pattern_allow([^TAR$])
-m4trace:configure.in:90: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2778: AC_CHECK_FILE is expanded from...
+m4trace:configure.in:73: -1- AM_CONDITIONAL([HAVE_PYTHON_MODULES], [test "$ac_cv_boost_python" == "yes"])
+m4trace:configure.in:73: -1- m4_pattern_allow([^HAVE_PYTHON_MODULES_TRUE$])
+m4trace:configure.in:73: -1- m4_pattern_allow([^HAVE_PYTHON_MODULES_FALSE$])
+m4trace:configure.in:73: -1- _AM_SUBST_NOTMAKE([HAVE_PYTHON_MODULES_TRUE])
+m4trace:configure.in:73: -1- _AM_SUBST_NOTMAKE([HAVE_PYTHON_MODULES_FALSE])
+m4trace:configure.in:75: -1- AX_BOOST_PROGRAM_OPTIONS
+m4trace:configure.in:75: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS$])
+m4trace:configure.in:75: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
+m4trace:configure.in:75: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
+m4trace:configure.in:75: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
+m4trace:configure.in:81: -1- AX_BOOST_IOSTREAMS
+m4trace:configure.in:81: -1- m4_pattern_allow([^HAVE_BOOST_IOSTREAMS$])
+m4trace:configure.in:81: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
+m4trace:configure.in:81: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
+m4trace:configure.in:81: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
+m4trace:configure.in:87: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2778: AC_CHECK_FILE is expanded from...
+configure.in:87: the top level])
+m4trace:configure.in:87: -1- m4_pattern_allow([^PATCH$])
+m4trace:configure.in:87: -1- m4_pattern_allow([^TAR$])
+m4trace:configure.in:87: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2778: AC_CHECK_FILE is expanded from...
 ../../lib/m4sugar/m4sh.m4:606: AS_IF is expanded from...
 ../../lib/autoconf/general.m4:2778: AC_CHECK_FILE is expanded from...
-configure.in:90: the top level])
-m4trace:configure.in:106: -1- m4_pattern_allow([^subdirs$])
-m4trace:configure.in:108: -1- AX_PYTHON
-m4trace:configure.in:108: -1- m4_pattern_allow([^PYTHON_BIN$])
-m4trace:configure.in:108: -1- m4_pattern_allow([^PYTHON_INCLUDE_DIR$])
-m4trace:configure.in:108: -1- m4_pattern_allow([^PYTHON_LIB$])
-m4trace:configure.in:110: -1- m4_pattern_allow([^PYTHONCODEDIR$])
-m4trace:configure.in:115: -1- m4_pattern_allow([^PYTHONSUBDIR$])
-m4trace:configure.in:118: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+configure.in:87: the top level])
+m4trace:configure.in:103: -1- m4_pattern_allow([^subdirs$])
+m4trace:configure.in:106: -1- m4_pattern_allow([^PYTHONCODEDIR$])
+m4trace:configure.in:111: -1- m4_pattern_allow([^PYTHONSUBDIR$])
+m4trace:configure.in:112: -1- m4_pattern_allow([^HAVE_PYTHON_MODULES$])
+m4trace:configure.in:115: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.in:118: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.in:118: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.in:118: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.in:118: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.in:118: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.in:118: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.in:118: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.in:118: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
-m4trace:configure.in:118: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
-m4trace:configure.in:118: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
-m4trace:configure.in:118: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
-m4trace:configure.in:118: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
-m4trace:configure.in:118: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
-m4trace:configure.in:118: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
+m4trace:configure.in:115: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.in:115: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.in:115: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.in:115: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.in:115: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.in:115: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.in:115: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.in:115: -1- AM_CONDITIONAL([am__EXEEXT], [test -n "$EXEEXT"])
+m4trace:configure.in:115: -1- m4_pattern_allow([^am__EXEEXT_TRUE$])
+m4trace:configure.in:115: -1- m4_pattern_allow([^am__EXEEXT_FALSE$])
+m4trace:configure.in:115: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_TRUE])
+m4trace:configure.in:115: -1- _AM_SUBST_NOTMAKE([am__EXEEXT_FALSE])
+m4trace:configure.in:115: -1- _AC_AM_CONFIG_HEADER_HOOK(["$ac_file"])
+m4trace:configure.in:115: -1- _AM_OUTPUT_DEPENDENCY_COMMANDS
