--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 ********************************************************
-* Copyright (c) 2008-2007 Plecno s.r.l. All Rights Reserved 
+* Copyright (c) Plecno s.r.l. All Rights Reserved 
 * info@plecno.com
 * via Giovio 8, 20144 Milano, Italy
 *
